--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -2,24 +2,25 @@
 {% block main %}
     <div class="container">
         <div class="row">
-            <div class="col-md"></div>
-            <div class="col-md">
-                <h1>Steps to Export - Är du redo?</h1>
+            <div class="col-md-9">
+                <h1>Steps to Export - Att välja kursmoduler</h1>
+                <div class="alert alert-info">
+                    Kort instruktionstext här att författa senare men jag har formulerat detta onödigt
+                    långt för att se hur boxen beter sig. Så lägger till lite Lorem ipsum här då jag inte
+                    kommer på något vettigare att skriva.
+                </div>
             </div>
-            <div class="col-md"></div>
         </div>
         <div class="row">
-            <div class="col-md"></div>
-            <div class="col-md">
+            <div class="col-md-9">
                 <form method="post">
                     {{form.hidden_tag()}}
                     {{form.q1.label}} {{form.q1}}
                     {{form.q2.label}} {{form.q2}}
                     {{form.q3.label}} {{form.q3}}
-                    {{form.submit}}
+                    {{form.submit(class_="btn btn-primary")}}
                 </form>
-            </div>
-            <div class="col-md"></div>
+           </div>
         </div>
     </div>
 {% endblock %}
