--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -2,7 +2,13 @@
 {% block main %}
     <div class="container">
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md">
+                <img src="{{url_for('static', filename='BusSwe_LogoDesc-C_RGB.jpg')}}" class="img-fluid float-left" id="main_logo">
+                <img src="{{url_for('static', filename='steps-logga.jpg')}}" class="img-fluid float-right" id="steps_logo">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md">
                 <h1>Steps to Export - Att välja kursmoduler</h1>
                 <div class="alert alert-info">
                     Kort instruktionstext här att författa senare men jag har formulerat detta onödigt
@@ -12,7 +18,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md">
                 <form method="post">
                     {{form.hidden_tag()}}
                     {% for field in form if field.type == 'RadioField' %}
