--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -2,14 +2,21 @@
 {% block main %}
     <div class="container">
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md">
+                <img src="{{url_for('static', filename='BusSwe_LogoDesc-C_RGB.jpg')}}" class="img-fluid float-left" id="main_logo">
+                <img src="{{url_for('static', filename='steps-logga.jpg')}}" class="img-fluid float-right" id="steps_logo">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md">
                 <h1>Steps to Export - Att välja kursmoduler</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md">
                 {% if feedback|length < 1 %}
                     <p>Du verkar ha full koll på det mesta. Du kanske borde boka ett individuellt möte med en Exportrådgivare istället?</p>
+                    <a href="https://www.business-sweden.se/kontakt/regionala-exportradgivare/">Visa mig!</a>
                 {% else %}
                     <p>Tack för dina svar. Baserat på dem rekommenderar vi följande moduler</p>
                     <ul class="list-group">
