--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -24,9 +24,14 @@
                         <li class="list-group-item">{{item[0]}} - <a href="{{item[1]}}" target="_blank">{{item[1]}}</a></li>
                         {% endfor %}
                     </ul>
-                    <p>Vi önskar dig lycka till!</p>
+
                 {% endif %}
             </div>
+        <div class="row">
+            <div class="col-md">
+                <img src="{{url_for('static', filename='ste_nomenu.png')}}" id="ste_map" width="1149" height="645" class="img-fluid">
+            </div>
+        </div>
         </div>
     </div>
 {% endblock %}
