--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
     <link rel="stylesheet" href="{{url_for('static', filename='custom.css')}}">
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
     <title>Steps to Export - readiness assessment</title>
 </head>
-<body>
+<body class="grey lighten-2">
     {% block main %}
     {% endblock %}
 </body>
