--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -2,34 +2,42 @@
 {% block main %}
     <div class="container">
         <div class="row">
-            <div class="col-md">
-                <img src="{{url_for('static', filename='BusSwe_LogoDesc-C_RGB.jpg')}}" class="img-fluid float-left" id="main_logo">
-                <img src="{{url_for('static', filename='steps-logga.jpg')}}" class="img-fluid float-right" id="steps_logo">
+            <div class="col s6">
+                <img src="{{url_for('static', filename='BusSwe_LogoDesc-C_RGB.jpg')}}" class="left" id="main_logo">
+            </div>
+            <div class="col s6">
+                <img src="{{url_for('static', filename='steps-logga.jpg')}}" class="right" id="steps_logo">
             </div>
         </div>
         <div class="row">
-            <div class="col-md">
-                <h1>Steps to Export - Att välja kursmoduler</h1>
+            <div class="col">
+                <h2>Steps to Export - Välja kursmoduler</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col-md">
-                {% if feedback|length < 1 %}
-                    <p>Du verkar ha full koll på det mesta. Du kanske borde boka ett individuellt möte med en Exportrådgivare istället?</p>
-                    <a href="https://www.business-sweden.se/kontakt/regionala-exportradgivare/">Visa mig!</a>
-                {% else %}
-                    <p>Tack för dina svar. Baserat på dem rekommenderar vi följande moduler</p>
-                    <ul class="list-group">
+            <div class="col s12">
+                <div class="card teal darken-1">
+                    <div class="card-content white-text">
+                    {% if feedback|length < 1 %}
+                        <span class="card-title">Exportmästare!</span>
+                        <p>Du verkar ha full koll på det mesta. Du kanske borde boka ett individuellt möte med en Exportrådgivare istället?</p>
+                        <a href="https://www.business-sweden.se/kontakt/regionala-exportradgivare/">Visa mig!</a>
+                    {% else %}
+                        <span class="card-title">Tack för dina svar!</span>
+                        <p>Baserat på vad du berättat rekommenderar vi följande moduler</p>
+                    </div>
+                </div>
+                    <ul class="collection">
                         {% for item in feedback %}
-                        <li class="list-group-item">{{item[0]}} - <a href="{{item[1]}}" target="_blank">{{item[1]}}</a></li>
+                        <li class="collection-item">{{item[0]}} - <a href="{{item[1]}}" target="_blank">{{item[1]}}</a></li>
                         {% endfor %}
                     </ul>
 
                 {% endif %}
             </div>
         <div class="row">
-            <div class="col-md">
-                <img src="{{url_for('static', filename='ste_nomenu.png')}}" id="ste_map" width="1149" height="645" class="img-fluid">
+            <div class="col">
+                <img src="{{url_for('static', filename='ste_nomenu.png')}}" id="ste_map" class="responsive-img">
             </div>
         </div>
         </div>
