--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -20,11 +20,11 @@
                     <div class="card-content white-text">
                     {% if feedback|length < 1 %}
                         <span class="card-title">Exportmästare!</span>
-                        <p>Du verkar ha full koll på det mesta. Du kanske borde boka ett individuellt möte med en Exportrådgivare istället?</p>
+                        <p class="flow-text">Du verkar ha full koll på det mesta. Du kanske borde boka ett individuellt möte med en Exportrådgivare istället?</p>
                         <a href="https://www.business-sweden.se/kontakt/regionala-exportradgivare/">Visa mig!</a>
                     {% else %}
                         <span class="card-title">Tack för dina svar!</span>
-                        <p>Baserat på vad du berättat rekommenderar vi följande moduler</p>
+                        <p class="flow-text">Baserat på vad du berättat rekommenderar vi följande moduler</p>
                     </div>
                 </div>
                     <ul class="collection">
@@ -32,7 +32,6 @@
                         <li class="collection-item">{{item[0]}} - <a href="{{item[1]}}" target="_blank">{{item[1]}}</a></li>
                         {% endfor %}
                     </ul>
-
                 {% endif %}
             </div>
         <div class="row">
