--- a/static/custom.css
+++ b/static/custom.css
@@ -50,8 +50,35 @@ form > ul > li {
     font-size: 1.5rem;
     }
 
+.bus-blue-light {
+    background: #36a9e1;
+}
+
+.bus-blue-dark {
+    background: #004381;
+}
+
+.bus-yellow-light {
+    background: #ffcc00;
+}
+
+.bus-yellow-dark {
+    background: #ef7d00;
+}
+
+.error-title {
+    font-weight: 700;
+    font-size: 1.5em;
+}
+
+.error {
+    font-size: 1.4em;
+}
+
+
 @media (max-width:376px){
     form > ul > li {
         display:block;
         }
 }
+
