UI fix in feedback

--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -30,7 +30,7 @@
                 </div>
                     <ul class="collection">
                         {% for item in feedback %}
-                            <li class="collection-item flow-text">{{item[0]}} - <a href="{{item[1]}}" target="_blank">{{item[1]}}</a></li>
+                            <li class="collection-item flow-text">{{item[0]}} - <a href="{{item[1]}}" target="_blank">Klicka för att börja</a></li>
                         {% endfor %}
                     </ul>
                 {% endif %}
