Pilot market added

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <title>Steps to Export - readiness assessment</title>
 </head>
 <body class="grey lighten-2">
+    <div style="background-color: red; color: white; min-width:100%; text-align:center; padding: 5px;">PILOT VERSION - ONLY FOR TESTING PURPOSES</div>
     {% block main %}
     {% endblock %}
 </body>
