Updated texts from Peter

--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -15,9 +15,11 @@
                 <h2>Steps to Export - Välja kursmoduler</h2>
                 <div class="card bus-yellow-dark">
                     <div class="card-content white-text">
-                    <p class="flow-text">Kort instruktionstext här att författa senare men jag har formulerat detta onödigt
-                    långt för att se hur boxen beter sig. Så lägger till lite Lorem ipsum här då jag inte
-                    kommer på något vettigare att skriva.</p>
+                    <p class="flow-text">Välkommen till Steps to Export! Innan du påbörjar din exportresa, så vill vi
+                        gärna att du svarar på några frågor. Detta för att vi ska kunna guida dig till de stationer,
+                        som du kanske främst har ett behov av att besöka. Vilka dessa stationer är, kommer att framgå
+                        av den tunnelbanekarta du får fram på nästa sida.
+                    </p>
                     </div>
                 </div>
             </div>
