--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -25,7 +25,9 @@
                         <a href="https://www.business-sweden.se/kontakt/regionala-exportradgivare/">Visa mig!</a>
                     {% else %}
                         <span class="card-title">Tack för dina svar!</span>
-                        <p class="flow-text">Baserat på vad du berättat rekommenderar vi följande moduler</p>
+                        <p class="flow-text">Baserat på vad du berättat rekommenderar vi följande moduler. Detta är
+                            endast ett förslag och vill du besöka alla stationer eller välja några andra, så är det
+                            naturligtvis fritt fram att göra så.</p>
                     </div>
                 </div>
                     <ul class="collection">
