--- a/templates/500.html
+++ b/templates/500.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block main %}
-    <h2>Whoops...</h2>
-    <p>Something has gone wrong in this app. Please reload from your point of entry.</p>
-    <p>If the error persists, please let us know at <a href="mailto:peoplecentre@business-sweden.se">peoplecentre@business-sweden.se</a></p>
+    <div style="padding:20px;">
+        <h2>Whoops...</h2>
+        <p>Something has gone wrong in this app. Please reload from your point of entry.</p>
+        <p>If the error persists, please let us know at <a href="mailto:peoplecentre@business-sweden.se">peoplecentre@business-sweden.se</a></p>
+    </div>
 {% endblock %}
