--- a/static/custom.css
+++ b/static/custom.css
@@ -66,6 +66,14 @@ form > ul > li {
     background: #ef7d00;
 }
 
+.flashes > li {
+    background: #004381;
+    color: #f5f5f5;
+    text-align: center;
+    padding: 10px;
+    font-size: 1.5em;
+}
+
 .error-title {
     font-weight: 700;
     font-size: 1.5em;
