Cookies for persistence

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,15 @@
     <title>Steps to Export - readiness assessment</title>
 </head>
 <body class="grey lighten-2">
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class="flashes">
+                {% for message in messages %}
+                    <li>{{message|safe}}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
     {% block main %}
     {% endblock %}
 </body>
