--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -12,7 +12,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <h2>Steps to Export - Välja kursmoduler</h2>
+                <h2>Steps to Export - Välja stationer</h2>
                 <div class="card bus-yellow-dark">
                     <div class="card-content white-text">
                     <p class="flow-text">Välkommen till Steps to Export! Innan du påbörjar din exportresa, så vill vi
