--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -12,7 +12,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <h2>Steps to Export - Välja kursmoduler</h2>
+                <h2>Steps to Export - Välja stationer</h2>
             </div>
         </div>
         <div class="row">
@@ -25,7 +25,7 @@
                         <a href="https://www.business-sweden.se/kontakt/regionala-exportradgivare/">Visa mig!</a>
                     {% else %}
                         <span class="card-title">Tack för dina svar!</span>
-                        <p class="flow-text">Baserat på vad du berättat rekommenderar vi följande moduler. Detta är
+                        <p class="flow-text">Baserat på vad du berättat rekommenderar vi följande stationer. Detta är
                             endast ett förslag och vill du besöka alla stationer eller välja några andra, så är det
                             naturligtvis fritt fram att göra så.</p>
                     </div>
