--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -47,6 +47,7 @@
                     {% endfor %}
                     {{form.submit(class_="btn-large waves-effect waves-light flow-text bus-yellow-dark")}}
                 </form>
+                <p class="tech-info">Dina svar kommer att sparas på denna enhet förutsatt att du tillåter cookies på denna site.</p>
                 {% if form.errors %}
                 <p class="red-text">Vi har problem med ditt formulär.. <a href="#top">Scrolla upp.</a></p>
                 {% endif %}
