Note on login required added

--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -28,8 +28,8 @@
                         <p class="flow-text">Baserat på vad du berättat rekommenderar vi följande stationer. Detta är
                             endast ett förslag och vill du besöka alla stationer eller välja några andra, så är det
                             naturligtvis fritt fram att göra så.</p>
-                        <p class="tech-info">Tabellen och kartan nedan innehåller länkar till stationerna. Beroende på browser och dina
-                        inställningar fungerar dessa inte alltid, men du kan alltid starta en station inifrån LearnCentre</p>
+                        <p class="tech-info">Tabellen och kartan nedan innehåller länkar till stationerna. Du måste vara inloggad i LearnCentre för att kunna starta en kurs. Beroende på browser och dina
+                        inställningar fungerar dessa inte alltid, men du kan alltid starta en station inifrån LearnCentre.</p>
                     </div>
                 </div>
                     <ul class="collection">
